--- a/argo_application_config.yaml
+++ b/argo_application_config.yaml
@@ -1,4 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: gepardec-sso
+  namespace: gepaplexx-cicd-tools
+spec:
+  clusterResourceWhitelist:
+    - group: '*'
+      kind: '*'
+  destinations:
+    - namespace: '*'
+      server: '*'
+  sourceRepos:
+    - '*'
+---
+apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: gepardec-sso-config
@@ -9,7 +24,7 @@ spec:
     namespace: gepardec-sso
   source:
     path: config
-    repoURL: git@github.com:gepaplexx-demos/gepardec-sso-ci.git
+    repoURL: https://github.com/gepaplexx-demos/gepardec-sso-ci.git
     targetRevision: main
   project: gepardec-sso
   syncPolicy:
