splitted master and gepardec realm

--- a/config/keycloak-config.yaml
+++ b/config/keycloak-config.yaml
@@ -47,6 +47,8 @@ data:
       envelopeFrom: ""
       ssl: "true"
 
+  02_master.yaml: |
+    realm: master
     roles:
       realm:
       - name: admin-role-gepardec-realm
