--- a/apps/env/dev/Chart.yaml
+++ b/apps/env/dev/Chart.yaml
@@ -6,6 +6,10 @@ type: application
 version: 0.1.0
 
 dependencies:
+  - name: gp-keycloak-operator
+    alias: keycloak-operator
+    repository: https://docs.gepaplexx.com/gp-helm-charts/
+    version: ~0.1.0
   - name: gp-keycloak-instance
     alias: keycloak
     repository: https://docs.gepaplexx.com/gp-helm-charts/
