--- a/apps/env/dev/templates/db-backup-cron.yaml
+++ b/apps/env/dev/templates/db-backup-cron.yaml
@@ -22,7 +22,7 @@ spec:
                   && psql -h ${HOSTNAME} -p ${PORT} -U postgres -w -d postgres -c "select pg_terminate_backend(pid) from pg_stat_activity where datname='${DATABASE}';"
                   && PGPASSWORD="${USER_PASSWORD}" pg_dump -h ${HOSTNAME} -p ${PORT} -U ${USER} -w --format tar --file /backup/${NAMESPACE}-${TIMESTAMP}.tar.gz ${DATABASE};
                   && cd /backup;
-                  && ls -r | tail -n +{{ .Values.db.backup.retain.days }} | xargs rm -f
+                  && ls -r | tail -n +{{ .Values.db.backup.retain.days }} | xargs rm -f;
               resources:
                 limits:
                   memory: "128Mi"
