--- a/apps/env/kc-dev/templates/db-backup-cron.yaml
+++ b/apps/env/kc-dev/templates/db-backup-cron.yaml
@@ -8,6 +8,7 @@ spec:
   schedule: '{{ .Values.db.backup.schedule }}'
   jobTemplate:
     spec:
+      backoffLimit: 1
       template:
         metadata:
           labels:
