--- a/apps/env/kc-dev/values.yaml
+++ b/apps/env/kc-dev/values.yaml
@@ -14,6 +14,6 @@ keycloak:
 db:
   backup:
     name: sso-db-backup
-    schedule: '*/2 * * * *'
+    schedule: '0 0 * * *'
     retain:
       days: 8 # need to +1, so 7 days = 8
