--- a/apps/env/test/templates/db-backup-cron.yaml
+++ b/apps/env/test/templates/db-backup-cron.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ .Values.db.backup.name }}
+  name: '{{ .Values.keycloak.fullnameOverride }}-backup'
 spec:
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 1
@@ -56,5 +56,5 @@ spec:
           volumes:
             - name: "backup-volume"
               persistentVolumeClaim:
-                claimName: {{ .Values.db.backup.name }}
+                claimName: '{{ .Values.keycloak.fullnameOverride }}-backup'
           restartPolicy: Never
