--- a/apps/env/test/templates/db-backup-cron.yaml
+++ b/apps/env/test/templates/db-backup-cron.yaml
@@ -19,10 +19,12 @@ spec:
               image: docker.io/bitnami/postgresql:{{ .Values.keycloak.postgresql.image.tag }}
               command: ["/bin/sh", "-c"]
               args:
-                - export TIMESTAMP="`date "+%Y%m%d-%H%M%S"`"
-                  && psql -h ${HOSTNAME} -p ${PORT} -U postgres -w -d postgres -c "select pg_terminate_backend(pid) from pg_stat_activity where datname='${DATABASE}';"
-                  && PGPASSWORD="${USER_PASSWORD}" pg_dump -h ${HOSTNAME} -p ${PORT} -U ${USER} -w --format tar --file /backup/db-backup-${TIMESTAMP}.tar.gz ${DATABASE}
+                - export TIMESTAMP="`date '+%Y%m%d-%H%M%S'`"
+                  && export BACKUP_NAME="db-backup-${TIMESTAMP}.tar.gz"
                   && cd /backup
+                  && psql -h ${HOSTNAME} -p ${PORT} -U postgres -w -d postgres -c "select pg_terminate_backend(pid) from pg_stat_activity where datname='${DATABASE}';"
+                  && PGPASSWORD="${USER_PASSWORD}" pg_dump -h ${HOSTNAME} -p ${PORT} -U ${USER} -w --format tar --file ${BACKUP_NAME} ${DATABASE}
+                  && ln -sf ${BACKUP_NAME} latest
                   && ls -r | tail -n +{{ .Values.db.backup.retain.days }} | xargs rm -f
               resources:
                 limits:
