--- a/apps/env/prod/values.yaml
+++ b/apps/env/prod/values.yaml
@@ -16,8 +16,10 @@ keycloak:
     fullnameOverride: &dbName "gepardec-sso-db"
     auth:
       existingSecret: *dbName
-db:
-  backup:
-    schedule: '0 0 * * *'
-    retain:
-      days: 8 # need to +1, so 7 days = 8
+    backup:
+      enabled: true
+      # default values if backu is enabled
+      size: 10Gi
+      schedule: '0 0 * * *'
+      retain:
+        days: 8 # need to +1, so 7 days = 8
