Replicas is two now

--- a/apps/env/kc-dev/values.yaml
+++ b/apps/env/kc-dev/values.yaml
@@ -1,4 +1,5 @@
 keycloak:
+  replicas: 2
   fullnameOverride: gepardec-sso
   image: ghcr.io/gepaplexx-demos/gepardec-sso:19.0.2-gepardec-1.0.1
   ingress:
