kc-dev wird momentan nicht genutzt, vorübergehend deaktiviert

--- a/argocd/applicationset.yaml
+++ b/argocd/applicationset.yaml
@@ -33,9 +33,9 @@ spec:
   generators:
     - list:
         elements:
-          - cluster: kc-dev
-            url: https://kubernetes.default.svc
-            branch: main
+          # - cluster: kc-dev
+          #   url: https://kubernetes.default.svc
+          #   branch: main
           - cluster: dev
             url: https://kubernetes.default.svc
             branch: dev
