renamed existing secret

--- a/apps/env/prod/values.yaml
+++ b/apps/env/prod/values.yaml
@@ -15,7 +15,7 @@ keycloak:
   postgresql:
     fullnameOverride: &dbName "gepardec-sso-db"
     auth:
-      existingSecret: *dbName
+      existingSecret: keycloak-config
     backup:
       enabled: true
       # default values if backu is enabled
