GPX-661 MEGA und Demoservices werden gebaut und deployed
gepardec-sso deployment initial

Signed-off-by: fhochleitner <felix.hochleitner@gepardec.com>

--- a/argocd/applicationset.yaml
+++ b/argocd/applicationset.yaml
@@ -42,6 +42,9 @@ spec:
           - cluster: test
             url: https://kubernetes.default.svc
             branch: test
+          - cluster: prod
+            url: https://kubernetes.default.svc
+            branch: prod
 
   template:
     metadata:
