--- a/argocd/applicationset.yaml
+++ b/argocd/applicationset.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: gepardec-sso
-  namespace: gepaplexx-cicd-tools
+  namespace: gp-cicd-tools
   labels:
     owner: gepaplexx
   finalizers:
