GPX-661 MEGA und Demoservices werden gebaut und deployed
deploy only dev stage during development

Signed-off-by: fhochleitner <felix.hochleitner@gepardec.com>

--- a/argocd/applicationset.yaml
+++ b/argocd/applicationset.yaml
@@ -17,12 +17,12 @@ spec:
           - cluster: dev
             url: https://kubernetes.default.svc
             branch: dev
-          - cluster: test
-            url: https://kubernetes.default.svc
-            branch: test
-          - cluster: prod
-            url: https://kubernetes.default.svc
-            branch: prod
+#          - cluster: test
+#            url: https://kubernetes.default.svc
+#            branch: test
+#          - cluster: prod
+#            url: https://kubernetes.default.svc
+#            branch: prod
 
   template:
     metadata:
