GPX-661 MEGA und Demoservices werden gebaut und deployed
added externalsecrets and "customerinstance" value

Signed-off-by: fhochleitner <felix.hochleitner@gepardec.com>

--- a/apps/env/prod/values.yaml
+++ b/apps/env/prod/values.yaml
@@ -1,6 +1,7 @@
 env: prod
 
 keycloak:
+  customerInstance: true
   fullnameOverride: gepardec-sso
   image: ghcr.io/gepaplexx-demos/gepardec-sso:20.0.3-gepardec-1.0.0
   ingress:
