--- a/apps/env/kc-dev/templates/externalsecrets.yaml
+++ b/apps/env/kc-dev/templates/externalsecrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: {{ .Values.keycloak.postgresql.auth.existingSecret}}
+  name: {{ .Values.keycloak.postgresql.auth.existingSecret}}-{{ .Values.env }}
   namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
@@ -25,6 +25,7 @@ spec:
       data:
         password: {{`'{{ .db_password }}'`}}
         postgres-password: {{`'{{ .postgres_password }}'`}}
+        username: keycloak
 
 
 ---
