GPX-661 MEGA und Demoservices werden gebaut und deployed
added namespaced keycloak-operator installation to chart dependencies

Signed-off-by: fhochleitner <felix.hochleitner@gepardec.com>

--- a/apps/env/dev/Chart.yaml
+++ b/apps/env/dev/Chart.yaml
@@ -6,6 +6,10 @@ type: application
 version: 0.2.0
 
 dependencies:
+  - name: gp-keycloak-operator
+    alias: keycloak-operator
+    repository: https://gepaplexx.github.io/gp-helm-charts
+    version: ~1.0.0
   - name: gp-keycloak-instance
     alias: keycloak
     repository: https://gepaplexx.github.io/gp-helm-charts
