--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           release: 'gepardec-sso-qa'
           namespace: 'gepardec-sso-qa'
-          chart: 'apps/appuio/qa'
+          chart: 'apps/appuio/qa/helm'
           token: '${{ github.token }}'
         env:
           KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG_QA }}'
