--- a/apps/appuio/qa/helm/templates/serviceaccount.yaml
+++ b/apps/appuio/qa/helm/templates/serviceaccount.yaml
@@ -1,9 +1,12 @@
+{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: gepardec-sso
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "gepardec-sso.serviceAccountName" . }}
   labels:
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.Version }}
+    {{- include "gepardec-sso.labels" . | nindent 4 }}
+  {{- with .Values.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+{{- end }}
