--- a/apps/appuio/qa/manual/deployer-sa.yaml
+++ b/apps/appuio/qa/manual/deployer-sa.yaml
@@ -66,7 +66,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: deployer
-    namespace: mega-backend-qa
+    namespace: gepardec-sso-qa
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
