--- a/apps/appuio/qa/manual/secrets.yaml
+++ b/apps/appuio/qa/manual/secrets.yaml
@@ -18,13 +18,32 @@ metadata:
   name: keycloak-secret
   namespace: gepardec-sso-qa
 data:
-  KEYCLOAK_ADMIN: --
-  KC_DB_USERNAME: --
+  # base64 encoded dHJ1ZQ== encodes to true. This is done to have valid base64 encoded values in the secret inorder to avoid errors when deploying
+  # No actual values are stored in the secret
+  KEYCLOAK_ADMIN: dHJ1ZQ==
+  KC_HOSTNAME_URL: >-
+    dHJ1ZQ==
+  KC_DB_USERNAME: dHJ1ZQ==
   KC_HTTP_ENABLED: dHJ1ZQ==
-  KC_DB_PASSWORD: --
-  KC_DB_URL: >-
-    --
-  KEYCLOAK_ADMIN_PASSWORD: --
+  KC_DB_PASSWORD: dHJ1ZQ==
+  KC_DB_PASSWORD_USER: dHJ1ZQ==
+  KC_DB_URL: dHJ1ZQ==
+  KEYCLOAK_ADMIN_PASSWORD: dHJ1ZQ==
+  KC_HOSTNAME_ADMIN_URL: >-
+    dHJ1ZQ==
   KC_HTTPS_PORT: NDQz
 type: Opaque
+
+---
+
+kind: Secret
+apiVersion: v1
+metadata:
+  name: gepardec-sso-dockercfg
+  namespace: gepardec-sso-qa
+data:
+  .dockercfg: >-
+    dHJ1ZQ==
+type: kubernetes.io/dockercfg
+
 
