--- a/apps/appuio/qa/helm/values.yaml
+++ b/apps/appuio/qa/helm/values.yaml
@@ -4,16 +4,19 @@
 
 replicaCount: 1
 image:
-  repository: ghcr.io/gepaplexx-demos/gepardec-sso:20.0.3-gepardec-1.0.0
+  repository: ghcr.io/gepaplexx-demos/gepardec-sso
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
+
+imagePullSecrets:
+  - name: gepardec-sso-dockercfg
 
 nameOverride: ""
 fullnameOverride: ""
 
 route:
-  host: gepardec-sso-test.play.run.gepardec.com
+  host: gepardec-sso-qa.apps.cloudscale-lpg-2.appuio.cloud
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -47,11 +50,11 @@ resources:
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   limits:
-    cpu: 2
+    cpu: 1
     memory: 1Gi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
 
 nodeSelector: {}
 
@@ -67,10 +70,10 @@ postgresql:
   auth:
     username: keycloak # don't override
     database: keycloak # don't override
-    existingSecret: keycloak-secret # don't override
-    secretKeys:
-      adminPasswordKey: "KC_DB_PASSWORD"
-      userPasswordKey: "KC_DB_PASSWORD_USER"
+    existingSecret: keycloak-config # don't override
+#    secretKeys:
+#      adminPasswordKey: "KC_DB_PASSWORD"
+#      userPasswordKey: "KC_DB_PASSWORD"
   primary:
     ## Disable security context is needed to run on OpenShift
     containerSecurityContext:
