--- a/apps/appuio/qa/helm/values.yaml
+++ b/apps/appuio/qa/helm/values.yaml
@@ -70,6 +70,7 @@ postgresql:
   auth:
     username: keycloak # don't override
     database: keycloak # don't override
+    ###TODO find out why defining the secret keys like blow is not working
     existingSecret: keycloak-config # don't override
 #    secretKeys:
 #      adminPasswordKey: "KC_DB_PASSWORD"
