--- a/apps/appuio/qa/manual/secrets.yaml
+++ b/apps/appuio/qa/manual/secrets.yaml
@@ -1,3 +1,6 @@
+###TODO Find out why setting a password for the Postgres database only works by defining it with this secret
+###More info about the password issue in the values.yaml
+
 kind: Secret
 apiVersion: v1
 metadata:
