--- a/apps/appuio/qa/manual/secrets.yaml
+++ b/apps/appuio/qa/manual/secrets.yaml
@@ -8,6 +8,7 @@ metadata:
   namespace: gepardec-sso-qa
 immutable: false
 data:
+  ###DON'T CHECK IN ACTUAL VALUES!!!
   password: --secret-- #db_password in vault
   postgres-password: --secret--
   username: keycloak
@@ -21,8 +22,8 @@ metadata:
   name: keycloak-secret
   namespace: gepardec-sso-qa
 data:
-  # base64 encoded dHJ1ZQ== encodes to true. This is done to have valid base64 encoded values in the secret inorder to avoid errors when deploying
-  # No actual values are stored in the secret
+  # base64 encoded dHJ1ZQ== decodes to true. This is done to have valid base64 encoded values in the secret inorder to avoid errors when deploying
+  # No actual values are stored in the secret, DON'T CHECK IN ACTUAL VALUES!!!
   KEYCLOAK_ADMIN: dHJ1ZQ==
   KC_HOSTNAME_URL: >-
     dHJ1ZQ==
@@ -45,6 +46,7 @@ metadata:
   name: gepardec-sso-dockercfg
   namespace: gepardec-sso-qa
 data:
+  ###DON'T CHECK IN ACTUAL VALUES!!!
   .dockercfg: >-
     dHJ1ZQ==
 type: kubernetes.io/dockercfg
