add job to trigger config-cli workflow

--- a/apps/appuio/qa/manual/secrets.yaml
+++ b/apps/appuio/qa/manual/secrets.yaml
@@ -1,18 +1,17 @@
-###TODO Find out why setting a password for the Postgres database only works by defining it with this secret
-###More info about the password issue in the values.yaml
+#Probably not used anymore, but keeping it for reference
 
-kind: Secret
-apiVersion: v1
-metadata:
-  name: keycloak-config
-  namespace: gepardec-sso-qa
-immutable: false
-data:
-  ###DON'T CHECK IN ACTUAL VALUES!!!
-  password: --secret-- #db_password in vault
-  postgres-password: --secret--
-  username: keycloak
-type: Opaque
+#kind: Secret
+#apiVersion: v1
+#metadata:
+#  name: keycloak-config
+#  namespace: gepardec-sso-qa
+#immutable: false
+#data:
+#  ###DON'T CHECK IN ACTUAL VALUES!!!
+#  password: --secret-- #db_password in vault
+#  postgres-password: --secret--
+#  username: keycloak
+#type: Opaque
 
 ---
 
