--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,4 +21,21 @@ jobs:
           token: '${{ github.token }}'
         env:
           KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG_QA }}'
+  trigger-cli:
+    runs-on: ubuntu-latest
+    steps:
+        - name: Trigger Workflow in gepardec-sso-config-ci
+          run: |
+            # Set the required variables
+            repo_owner="gepaplexx-demos" 
+            repo_name="gepardec-sso-config-ci"  
+            event_type="trigger-workflow" 
+            
+            curl -L \
+              -X POST \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ secrets.PAT }}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
+              -d "{\"event_type\": \"$event_type\", \"client_payload\": {}}"
 
