remove docker cfg

--- a/apps/appuio/qa/manual/secrets.yaml
+++ b/apps/appuio/qa/manual/secrets.yaml
@@ -39,15 +39,15 @@ type: Opaque
 
 ---
 
-kind: Secret
-apiVersion: v1
-metadata:
-  name: gepardec-sso-dockercfg
-  namespace: gepardec-sso-qa
-data:
-  ###DON'T CHECK IN ACTUAL VALUES!!!
-  .dockercfg: >-
-    dHJ1ZQ==
-type: kubernetes.io/dockercfg
+#kind: Secret
+#apiVersion: v1
+#metadata:
+#  name: gepardec-sso-dockercfg
+#  namespace: gepardec-sso-qa
+#data:
+#  ###DON'T CHECK IN ACTUAL VALUES!!!
+#  .dockercfg: >-
+#    dHJ1ZQ==
+#type: kubernetes.io/dockercfg
 
 
