multiple release environment support

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,8 @@ on:
 jobs:
   deployment:
     runs-on: 'ubuntu-latest'
-    environment: ${{ inputs.environment }}
+    environment:
+        name: ${{ inputs.environment }}
     steps:
       - uses: actions/checkout@v1
 
