--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,14 +20,14 @@ jobs:
       - uses: actions/checkout@v1
 
       #helm dependency build apps/appuio/qa/helm
-      - run: helm dependency build ${{ secrets.HELM_PATH }}
+      - run: helm dependency build ${{ vars.HELM_PATH }}
 
       - name: 'Deploy'
         uses: 'vimeda/helm@v1.7.0'
         with:
-          release: ${{ secrets.NAME }}
-          namespace: ${{ secrets.NAME }}
-          chart: ${{ secrets.HELM_PATH }}
+          release: ${{ vars.NAME }}
+          namespace: ${{ vars.NAME }}
+          chart: ${{ vars.HELM_PATH }}
           token: '${{ github.token }}'
         env:
           KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG_QA }}'
