--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,7 +30,7 @@ jobs:
           chart: ${{ vars.HELM_PATH }}
           token: '${{ github.token }}'
         env:
-          KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG_QA }}'
+          KUBECONFIG_FILE: '${{ secrets.KUBE_CONFIG }}'
   trigger-cli:
     needs: deployment
     runs-on: ubuntu-latest
