--- a/apps/appuio/qa/manual/secrets.yaml
+++ b/apps/appuio/qa/manual/secrets.yaml
@@ -1,39 +1,30 @@
-#Probably not used anymore, but keeping it for reference
-
-#kind: Secret
-#apiVersion: v1
-#metadata:
-#  name: keycloak-config
-#  namespace: gepardec-sso-qa
-#immutable: false
-#data:
-#  ###DON'T CHECK IN ACTUAL VALUES!!!
-#  password: --secret-- #db_password in vault
-#  postgres-password: --secret--
-#  username: keycloak
-#type: Opaque
-
----
-
 kind: Secret
 apiVersion: v1
 metadata:
   name: keycloak-secret
   namespace: gepardec-sso-qa
 data:
-  # base64 encoded dHJ1ZQ== decodes to true. This is done to have valid base64 encoded values in the secret inorder to avoid errors when deploying
+  # Dummy values for secrets are base64 encoded too. This is done to have valid base64 encoded values in the secret inorder to avoid errors when applying
   # No actual values are stored in the secret, DON'T CHECK IN ACTUAL VALUES!!!
-  KEYCLOAK_ADMIN: dHJ1ZQ==
+  # admin
+  KEYCLOAK_ADMIN: YWRtaW4=
+  # https://gepardec-sso-qa.apps.cloudscale-lpg-2.appuio.cloud
   KC_HOSTNAME_URL: >-
-    dHJ1ZQ==
-  KC_DB_USERNAME: dHJ1ZQ==
+    aHR0cHM6Ly9nZXBhcmRlYy1zc28tcWEuYXBwcy5jbG91ZHNjYWxlLWxwZy0yLmFwcHVpby5jbG91ZA==
+  # keycloak
+  KC_DB_USERNAME: a2V5Y2xvYWs=
+  # true
   KC_HTTP_ENABLED: dHJ1ZQ==
-  KC_DB_PASSWORD: dHJ1ZQ==
-  KC_DB_PASSWORD_USER: dHJ1ZQ==
-  KC_DB_URL: dHJ1ZQ==
-  KEYCLOAK_ADMIN_PASSWORD: dHJ1ZQ==
+  # changeme
+  KC_DB_PASSWORD: a2V5Y2xvYWs=
+  # jdbc:postgresql://postgresql-keycloak:5432/keycloak
+  KC_DB_URL: amRiYzpwb3N0Z3Jlc3FsOi8vcG9zdGdyZXNxbC1rZXljbG9hazo1NDMyL2tleWNsb2Fr
+  # changeme
+  KEYCLOAK_ADMIN_PASSWORD: a2V5Y2xvYWs=
+  # https://gepardec-sso-qa.apps.cloudscale-lpg-2.appuio.cloud
   KC_HOSTNAME_ADMIN_URL: >-
-    dHJ1ZQ==
+    aHR0cHM6Ly9nZXBhcmRlYy1zc28tcWEuYXBwcy5jbG91ZHNjYWxlLWxwZy0yLmFwcHVpby5jbG91ZA==
+  # 443
   KC_HTTPS_PORT: NDQz
 type: Opaque
 
