add oauth credentials

--- a/apps/appuio/qa/manual/secrets.yaml
+++ b/apps/appuio/qa/manual/secrets.yaml
@@ -28,3 +28,18 @@ data:
   KC_HTTPS_PORT: NDQz
 type: Opaque
 
+---
+
+kind: Secret
+apiVersion: v1
+metadata:
+  name: google-oauth-credentials
+  namespace: gepardec-sso-qa
+immutable: false
+data:
+  #cahngeme
+  secrets.properties: >-
+    a2V5Y2xvYWs=
+type: Opaque
+
+
