add description to secret

--- a/apps/appuio/qa/manual/secrets.yaml
+++ b/apps/appuio/qa/manual/secrets.yaml
@@ -38,6 +38,9 @@ metadata:
 immutable: false
 data:
   #cahngeme
+  #should be in format of:
+  # GOOGLE_CLIENT_ID=<secret>.apps.googleusercontent.com
+  # GOOGLE_CLIENT_SECRET=<secret>
   secrets.properties: >-
     a2V5Y2xvYWs=
 type: Opaque
