--- a/apps/appuio/qa/manual/secrets.yaml
+++ b/apps/appuio/qa/manual/secrets.yaml
@@ -15,12 +15,12 @@ data:
   KC_DB_USERNAME: a2V5Y2xvYWs=
   # true
   KC_HTTP_ENABLED: dHJ1ZQ==
-  # changeme
-  KC_DB_PASSWORD: a2V5Y2xvYWs=
+  # change me
+  KC_DB_PASSWORD: Y2hhbmdlbWU=
   # jdbc:postgresql://postgresql-keycloak:5432/keycloak
   KC_DB_URL: amRiYzpwb3N0Z3Jlc3FsOi8vcG9zdGdyZXNxbC1rZXljbG9hazo1NDMyL2tleWNsb2Fr
-  # changeme
-  KEYCLOAK_ADMIN_PASSWORD: a2V5Y2xvYWs=
+  # change me
+  KEYCLOAK_ADMIN_PASSWORD: Y2hhbmdlbWU=
   # https://gepardec-sso-qa.apps.cloudscale-lpg-2.appuio.cloud
   KC_HOSTNAME_ADMIN_URL: >-
     aHR0cHM6Ly9nZXBhcmRlYy1zc28tcWEuYXBwcy5jbG91ZHNjYWxlLWxwZy0yLmFwcHVpby5jbG91ZA==
@@ -37,7 +37,6 @@ metadata:
   namespace: gepardec-sso-qa
 immutable: false
 data:
-  #cahngeme
   #should be in format of:
   # GOOGLE_CLIENT_ID=<secret>.apps.googleusercontent.com
   # GOOGLE_CLIENT_SECRET=<secret>
