add the dropdown part of the destroy workflow dispatch

--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -2,6 +2,14 @@ name: Destroy via Helm
 
 on:
   workflow_dispatch:
+    inputs:
+      environment:
+        type: choice
+        description: Select the environment
+        required: true
+        options:
+          - qa
+          - prod
 
 
 jobs:
