--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -17,6 +17,8 @@ jobs:
     runs-on: 'ubuntu-latest'
     steps:
       - uses: actions/checkout@v1
+        environment:
+          name: ${{ inputs.environment }}
 
       - name: 'Destroy'
         uses: 'vimeda/helm@v1.7.0'
