--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,7 +43,7 @@ jobs:
             # Set the required variables
             repo_owner="gepaplexx-demos" 
             repo_name="gepardec-sso-config-ci"  
-            event_type="trigger-workflow" 
+            event_type="trigger-workflow-qa" 
             
             curl -L \
               -X POST \
