--- a/apps/appuio/prod/manual/secrets.yaml
+++ b/apps/appuio/prod/manual/secrets.yaml
@@ -2,15 +2,15 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: keycloak-secret
-  namespace: gepardec-sso-qa
+  namespace: gepardec-sso-prod
 data:
   # Dummy values for secrets are base64 encoded too. This is done to have valid base64 encoded values in the secret inorder to avoid errors when applying
   # No actual values are stored in the secret, DON'T CHECK IN ACTUAL VALUES!!!
   # admin
   KEYCLOAK_ADMIN: YWRtaW4=
-  # https://gepardec-sso-qa.apps.cloudscale-lpg-2.appuio.cloud
+  # https://gepardec-sso-prod.apps.cloudscale-lpg-2.appuio.cloud
   KC_HOSTNAME_URL: >-
-    aHR0cHM6Ly9nZXBhcmRlYy1zc28tcWEuYXBwcy5jbG91ZHNjYWxlLWxwZy0yLmFwcHVpby5jbG91ZA==
+    aHR0cHM6Ly9nZXBhcmRlYy1zc28tcHJvZC5hcHBzLmNsb3Vkc2NhbGUtbHBnLTIuYXBwdWlvLmNsb3Vk
   # keycloak
   KC_DB_USERNAME: a2V5Y2xvYWs=
   # true
@@ -21,9 +21,9 @@ data:
   KC_DB_URL: amRiYzpwb3N0Z3Jlc3FsOi8vcG9zdGdyZXNxbC1rZXljbG9hazo1NDMyL2tleWNsb2Fr
   # change me
   KEYCLOAK_ADMIN_PASSWORD: Y2hhbmdlbWU=
-  # https://gepardec-sso-qa.apps.cloudscale-lpg-2.appuio.cloud
+  # https://gepardec-sso-prod.apps.cloudscale-lpg-2.appuio.cloud
   KC_HOSTNAME_ADMIN_URL: >-
-    aHR0cHM6Ly9nZXBhcmRlYy1zc28tcWEuYXBwcy5jbG91ZHNjYWxlLWxwZy0yLmFwcHVpby5jbG91ZA==
+    aHR0cHM6Ly9nZXBhcmRlYy1zc28tcHJvZC5hcHBzLmNsb3Vkc2NhbGUtbHBnLTIuYXBwdWlvLmNsb3Vk
   # 443
   KC_HTTPS_PORT: NDQz
 type: Opaque
@@ -34,14 +34,14 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: google-oauth-credentials
-  namespace: gepardec-sso-qa
+  namespace: gepardec-sso-prod
 immutable: false
 data:
   #should be in format of:
   # GOOGLE_CLIENT_ID=<secret>.apps.googleusercontent.com
   # GOOGLE_CLIENT_SECRET=<secret>
   secrets.properties: >-
-    a2V5Y2xvYWs=
+    R09PR0xFX0NMSUVOVF9JRD08c2VjcmV0Pi5hcHBzLmdvb2dsZXVzZXJjb250ZW50LmNvbQpHT09HTEVfQ0xJRU5UX1NFQ1JFVD08c2VjcmV0Pg==
 type: Opaque
 
 
