--- a/apps/appuio/prod/manual/deployer-sa.yaml
+++ b/apps/appuio/prod/manual/deployer-sa.yaml
@@ -2,7 +2,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: custom-deployer
-  namespace: gepardec-sso-qa
+  namespace: gepardec-sso-prod
 rules:
   - verbs:
       - create
@@ -76,11 +76,11 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: custom-deployer
-  namespace: gepardec-sso-qa
+  namespace: gepardec-sso-prod
 subjects:
   - kind: ServiceAccount
     name: deployer
-    namespace: gepardec-sso-qa
+    namespace: gepardec-sso-prod
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
