initial changes to test tls re encrypt

--- a/apps/appuio/qa/manual/secrets.yaml
+++ b/apps/appuio/qa/manual/secrets.yaml
@@ -26,6 +26,8 @@ data:
     aHR0cHM6Ly9nZXBhcmRlYy1zc28tcWEuYXBwcy5jbG91ZHNjYWxlLWxwZy0yLmFwcHVpby5jbG91ZA==
   # 443
   KC_HTTPS_PORT: NDQz
+  KC_HTTPS_CERTIFICATE_FILE: dHJ1ZQ==
+  KC_HTTPS_CERTIFICATE_KEY_FILE: dHJ1ZQ==
 type: Opaque
 
 ---
