--- a/apps/appuio/qa/helm/templates/deployment.yaml
+++ b/apps/appuio/qa/helm/templates/deployment.yaml
@@ -30,6 +30,10 @@ spec:
       serviceAccountName: {{ include "gepardec-sso.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      volumes:
+        - name: certs-secret
+          secret:
+            secretName: {{ include "gepardec-sso.fullname" . }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -40,12 +44,19 @@ spec:
             - secretRef:
                 name: keycloak-secret
           ports:
-            - name: http
-              containerPort: 8080
+{{/*            - name: http*/}}
+{{/*              containerPort: 8080*/}}
+{{/*              protocol: TCP*/}}
+            - name: https
+              containerPort: 8443
               protocol: TCP
             - name: infinispan
               containerPort: 7800
               protocol: TCP
+          volumeMounts:
+            - mountPath: /etc/reencrypt/certs
+              name: certs-secret
+              readOnly: true
           readinessProbe:
             httpGet:
               path: /health/ready
