--- a/apps/appuio/qa/helm/templates/service.yaml
+++ b/apps/appuio/qa/helm/templates/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "gepardec-sso.fullname" . }}
+  annotations:
+    service.beta.openshift.io/serving-cert-secret-name: {{ include "gepardec-sso.fullname" . }}
   labels:
     {{- include "gepardec-sso.labels" . | nindent 4 }}
 spec:
@@ -11,6 +13,10 @@ spec:
     - name: http
       port: {{ .Values.service.port }}
       targetPort: http
+      protocol: TCP
+    - name: https
+      port: 443
+      targetPort: https
       protocol: TCP
   selector:
     {{- include "gepardec-sso.selectorLabels" . | nindent 4 }}
