--- a/apps/appuio/qa/helm/templates/service.yaml
+++ b/apps/appuio/qa/helm/templates/service.yaml
@@ -10,10 +10,10 @@ spec:
   type: {{ .Values.service.type }}
   internalTrafficPolicy: Cluster
   ports:
-    - name: http
-      port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
+{{/*    - name: http*/}}
+{{/*      port: {{ .Values.service.port }}*/}}
+{{/*      targetPort: http*/}}
+{{/*      protocol: TCP*/}}
     - name: https
       port: 443
       targetPort: https
