--- a/apps/appuio/qa/helm/templates/deployment.yaml
+++ b/apps/appuio/qa/helm/templates/deployment.yaml
@@ -44,9 +44,9 @@ spec:
             - secretRef:
                 name: keycloak-secret
           ports:
-            - name: http
-              containerPort: 8080
-              protocol: TCP
+{{/*            - name: http*/}}
+{{/*              containerPort: 8080*/}}
+{{/*              protocol: TCP*/}}
             - name: https
               containerPort: 8443
               protocol: TCP
