--- a/apps/appuio/qa/helm/templates/deployment.yaml
+++ b/apps/appuio/qa/helm/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           envFrom:
             - secretRef:
-                name: keycloak-secret
+                name: keycloak-secret-tls
           ports:
 {{/*            - name: http*/}}
 {{/*              containerPort: 8080*/}}
