--- a/apps/appuio/qa/helm/templates/route.yaml
+++ b/apps/appuio/qa/helm/templates/route.yaml
@@ -14,5 +14,6 @@ spec:
     targetPort: http
   tls:
     termination: reencrypt
+    insecureEdgeTerminationPolicy: Allow
   wildcardPolicy: None
 
