--- a/apps/appuio/qa/helm/templates/route.yaml
+++ b/apps/appuio/qa/helm/templates/route.yaml
@@ -11,7 +11,7 @@ spec:
     name: {{ include "gepardec-sso.fullname" . }}
     weight: 100
   port:
-    targetPort: http
+    targetPort: https
   tls:
     termination: reencrypt
     insecureEdgeTerminationPolicy: Allow
